--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             .replace(/\/$/, '')
         },
         clickme: function() {
-          axios.get(`http://localhost:3000/test`, {
+          axios.get(`http://be:3000/test`, {
 
           })
           .then(response => {
