try alternate route

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             .replace(/\/$/, '')
         },
         clickme: function() {
-          axios.get(`be/test:3000`, {
+          axios.get('be:3000/test', {
 
           })
           .then(response => {
