--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
   $(function() {
     $('#clickme').click(function(ev) {
       $.ajax({
-        url: 'be:3000/test',
+        // url: 'be:3000/test',
+        url: 'http://be:3000/test',
         success: function(response) {
           console.log(response);
         },
