--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     $('#clickme').click(function(ev) {
       $.ajax({
         // url: 'be:3000/test',
-        url: 'http://be:3000/test',
+        // url: 'http://be:3000/test',
+        url: 'http://34.66.99.160:3000/test',
         success: function(response) {
           console.log(response);
         },
